--- a/note/templates/del_master.html
+++ b/note/templates/del_master.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Search</title>
+    <title>del_master</title>
 </head>
 <body>
     {% if errors %}
@@ -10,9 +10,9 @@
             {% endfor %}
         </ul>
     {% endif %}
-    <form action="../search/" method="get">
+    <form action="../del_master_results/" method="get">
         <input type="text" name="q">
-        <input type="submit" value="Search">
+        <input type="submit" value="Удалить мастера">
     </form>
 </body>
 </html>
